# p79-assignment4-pir

./: .gitignore  LICENSE  README.md  a.out  pyproject.toml  run.sh  x.py
examples/: demo_pir.py
pir/: __init__.py  db.py  defaults.py  encoding.py  lwe.py  message.py  pir.py  ring.py
tests/: test_db.py  test_encoding.py  test_lwe.py  test_pir.py  test_ring.py
